# sift

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.hpp.in
configgen/: README.md  generate_rules.py  index.html  populate.js  style.css
extlibs/nbsdx/: ThreadPool.h
extlibs/rosme/: smartenum.hpp
samples/: README.md  logger.conf
samples/rules/: 1TBS.json  Allman.json  GNU.json  Google.json  KnR.json  Whitesmiths.json  all_rules.json  rules.json
samples/src/: brightness_manager.cc  brightness_manager_1TBS.cc  brightness_manager_Allman.cc  brightness_manager_GNU.cc  brightness_manager_Google.cc  brightness_manager_KnR.cc  brightness_manager_Whitesmiths.cc  define.hpp  namespace_enum.cpp
samples/src/playground/src/: Main.cpp
samples/src/playground/src/app/: AppState.cpp  AppState.h  AppStateStack.cpp  AppStateStack.h  Application.cpp  Application.h  Command.cpp  Command.h  Context.h  GameState.cpp  GameState.h  KeyboardManager.cpp  KeyboardManager.h  MouseEvents.cpp  MouseEvents.h  PauseState.cpp  PauseState.h  README.md  SceneIO.cpp  SceneIO.h  StateIdentifiers.h  Window.cpp  Window.h
samples/src/playground/src/component/: Camera.h  DirectionalLight.h  Include.h  PointLight.h  Renderable.h  Script.h  Transform.h
samples/src/playground/src/ecs/: Component.h  Entity.cpp  Entity.h  Event.h  IComponentArray.h  Id.h  Include.h  System.h
samples/src/playground/src/manager/: MeshManager.cpp  MeshManager.h  ShaderManager.cpp  ShaderManager.h  TextFileManager.cpp  TextFileManager.h
samples/src/playground/src/math/: Angle.cpp  Angle.h  Geometry.h  Include.h  Intersection.h  Matrix.h  Quaternion.h  Vector.h
samples/src/playground/src/opengl/: BufferObject.cpp  BufferObject.h  Enum.h  Framebuffer.cpp  Framebuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Use.h  VertexAttributes.cpp  VertexAttributes.h
samples/src/playground/src/system/: DebugDrawRenderer.cpp  DebugDrawRenderer.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DebugSystem.cpp  DebugSystem.h  Events.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Material.h  PickingSystem.cpp  PickingSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  UiSystem.cpp  UiSystem.h  WrenBindings.cpp  WrenBindings.h  WrenBindingsImpl.cpp  WrenBindingsImpl.h
samples/src/playground/src/utils/: Array.h  Assert.h  BasicStorage.h  Container.h  Exception.h  File.h  Json.cpp  Json.h  Locator.h  Log.cpp  Log.h  MemoryArena.cpp  MemoryArena.h  Random.cpp  Random.h  RingBuffer.h  StringBimap.h  StringId.cpp  StringId.h  graph_algorithms.h  sparse_graph.h
samples/tests/rules/: alwayshavecurlybrackets.json  conflictclashdifferentscopes.json  conflictclashsamescopes.json  conflictnoclash.json  curlybracketsclosesameline.json  curlybracketscloseseparateline.json  curlybracketscloseseperateline.json  curlybracketsindentationalignwithdeclarationall.json  curlybracketsindentationalignwithdeclarationclassonly.json  curlybracketsopensameline.json  curlybracketsopenseparateline.json  curlybracketsopenseperateline.json  elseseperatelinefromcurlybracketclose.json  empty.json  maxcharactersperline.json  maxcharactersperlinenoparam.json  namemaxcharacterall.json  namemaxcharacternoparam.json  namemaxcharactersvariableonly.json  noauto.json  nocodeallowedsamelinecurlybracketsclose.json  nocodeallowedsamelinecurlybracketsopen.json  noconstcast.json  nodefines.json  nogoto.json  nomacrofunctions.json  nospacebetweenoperandsinternal.json  ownheaderbeforestandard.json  prefix.json  singlereturn.json  spacebetweenoperandsinternal.json  standardheaderbeforeown.json  startwithlowercase.json  startwithuppercase.json  tabindentation.json
samples/tests/src/: alwayshavecurlybrackets.cpp  curlybracketsameorseparateline.cpp  curlybracketsindentationalignwithdeclaration.cpp  elseseperatelinefromcurlybracketclose.cpp  headerorderownalone.cpp  maxcharactersperline.cpp  namemaxcharacter.cpp  noauto.cpp  nocodeallowedsamelinecurlybrackets.cpp  noconstcast.cpp  nogoto.cpp  ownheaderbeforestandardbad.cpp  ownheaderbeforestandardgood.cpp  ownheaderbeforestandardstandardalone.cpp  singlereturn.cpp  spacebetweenoperandsinternal.cpp  standardheaderbeforeownbad.cpp  standardheaderbeforeowngood.cpp  startwithloweruppercase.cpp
src/: main.cpp  pfe.cpp  pfe.hpp  sift.cpp  sift.hpp
src/core/: assert.hpp  constants.hpp  cpp_scope_extractor.cpp  cpp_scope_extractor.hpp  file.hpp  message.hpp  message_stack.cpp  message_stack.hpp  scope.cpp  scope.hpp  scope_extractor.cpp  scope_extractor.hpp  utils.hpp
src/core/utils/: json.hpp
src/flow/: cpp_flow_analyser.cpp  cpp_flow_analyser.hpp  flow_analyser.cpp  flow_analyser.hpp
src/syntax/: cpp_syntax_analyser.cpp  cpp_syntax_analyser.hpp  rule.cpp  rule.hpp  syntax_analyser.cpp  syntax_analyser.hpp
tests/: CMakeLists.txt  main.cpp  tests_flow.cpp  tests_json.cpp  tests_message.cpp  tests_rule.cpp  tests_samples.cpp  tests_scope.cpp  tests_system.cpp  utils.hpp
